# data-challenge

./: .gitignore  .pnp.cjs  README.md
data_quality_monitor/: Makefile  README.md  docker-compose.yaml  project.json  prometheus.yml  pyproject.toml
data_quality_monitor/config/: infrastructure.toml  infrastructure.yaml  rules.toml  rules.yaml
data_quality_monitor/src/data_quality_monitor/application/services/: runner.py  schema_validation.py
data_quality_monitor/src/data_quality_monitor/application/use_cases/: process_rules.py  run_check.py
data_quality_monitor/src/data_quality_monitor/application/usecases/: process.py  run_check.py
data_quality_monitor/src/data_quality_monitor/domain/factories/: clickhouse.py
data_quality_monitor/src/data_quality_monitor/domain/models/: __init__.py  result.py  rule.py
data_quality_monitor/src/data_quality_monitor/domain/models/kafka/: config.py
data_quality_monitor/src/data_quality_monitor/domain/models/rules/: result.py
data_quality_monitor/src/data_quality_monitor/domain/payloads/kafka/: build_payload.py
data_quality_monitor/src/data_quality_monitor/domain/repository/: clickhouse.py
data_quality_monitor/src/data_quality_monitor/infrastructure/: config.py  constants.py
data_quality_monitor/src/data_quality_monitor/infrastructure/adapters/: metrics.py  redpanda_consumer.py  redpanda_producer.py
data_quality_monitor/src/data_quality_monitor/infrastructure/clients/: clickhouse.py
data_quality_monitor/src/data_quality_monitor/infrastructure/repositories/: __init__.py  clickhouse_repository.py  redpanda_consumer.py  redpanda_consumer_clickhouse.py  redpanda_producer.py
data_quality_monitor/src/data_quality_monitor/infrastructure/rules/: engine.py
data_quality_monitor/src/data_quality_monitor/infrastructure/serializers/kafka/: payload_serializer.py
data_quality_monitor/src/data_quality_monitor/presentation/: api.py  cli.py
data_quality_monitor/tests/: empty_test.py  fail_integration_test.py  fail_intergration_test.py  fail_schema_test.py  fail_test.py  integration_test.py  test_rules.py
feature_store_ml/: Makefile  README.md  docker-compose.yaml  project.json  pyproject.toml
feature_store_ml/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
feature_store_ml/catboost_info/learn/: events.out.tfevents
feature_store_ml/catboost_info/test/: events.out.tfevents
feature_store_ml/config/: store.yaml
feature_store_ml/config/artifacts/: ensemble_model.pkl  lightgbm_model.pkl  metadata.pkl
feature_store_ml/config/sql/: feature_Store.sql
feature_store_ml/src/feature_store_ml/: __init__.py
feature_store_ml/src/feature_store_ml/application/use_cases/: materialize_features.py  serve_predictions.py  train_model.py
feature_store_ml/src/feature_store_ml/domain/: dataset.py  models.py
feature_store_ml/src/feature_store_ml/domain/models/: dataset.py  feature.py  model_artifact.py
feature_store_ml/src/feature_store_ml/infrastructure/: clients.py  config.py  registry.py
feature_store_ml/src/feature_store_ml/infrastructure/clients/: clickhouse.py
feature_store_ml/src/feature_store_ml/infrastructure/datasets/: builder.py
feature_store_ml/src/feature_store_ml/infrastructure/modeling/: ensemble_trainer.py  trainer.py
feature_store_ml/src/feature_store_ml/infrastructure/repositories/: clickhouse_repository.py
feature_store_ml/src/feature_store_ml/presentation/: cli.py
feature_store_ml/tests/: test_registry.py
pipeline_anomaly/: Makefile  pyproject.toml
pipeline_anomaly/config/: pipeline.yaml
pipeline_anomaly/src/pipeline_anomaly/application/use_cases/: compute_aggregates.py  detect_anomalies.py  load_dataset.py
pipeline_anomaly/src/pipeline_anomaly/domain/models/: aggregate.py  anomaly.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/: config.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/clients/: clickhouse.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/detectors/: dbscan.py  isolation_forest.py  zscore.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/generators/: synthetic_generator.py
pipeline_anomaly/src/pipeline_anomaly/infrastructure/repositories/: clickhouse_repository.py
pipeline_anomaly/src/pipeline_anomaly/presentation/: cli.py
