[tool.poetry]
name = "feature-store-ml"
version = "0.1.0"
description = "Feature store sandbox with LightGBM"
authors = ["Andrew Ghostuhin <me@torinasakura.name>"]
packages = [{include = "feature_store_ml", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
clickhouse-connect = "^0.9.2"
pandas = "^2.2"
numpy = "2.3.4"
lightgbm = "^4.3"
scikit-learn = "^1.5"
pyyaml = "^6.0"
joblib = "^1.4"
loguru = "^0.7"
typer = "^0.20.0"
click = "^8.3.0"
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
